.provarCaches/00D5f000005vwGkEAI/objects/rstk__sydataproctrack__c.object
<CustomObject>
    <description>sydataproctrack__c</description>
    <fields>
        <fullName>rstk__sydataproctrack_message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__sydataproctrack_millis__c</fullName>
        <label>Millisecs</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sydataproctrack_milliselapsed__c</fullName>
        <label>Millisecs Elaspsed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sydataproctrack_sydata__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SYDATA</label>
        <referenceTo>rstk__sydata__c</referenceTo>
        <relationshipName>sydataproctracks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sydata Process Track</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sydata Process Track</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>